# clyro

./: .gitignore  ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  Clyro.spec  LICENSE  Performance_Boosting.md  README.md  UX_UI_Bugs.md  build.py  build_release.py  clyro.iss  installer.iss  mypy.ini  pyproject.toml  pytest_output.txt  requirements.txt  ruff_errors.txt  ruff_output.txt
.github/workflows/: ci.yml  release.yml
benchmarks/: queue_regression.py
src/clyro/: app.py  errors.py  main.py  updater.py
src/clyro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/clyro/cli/: commands.py
src/clyro/config/: presets.py  schema.py  store.py
src/clyro/core/: backup.py  classify.py  convert.py  dispatcher.py  image.py  optimize.py  output.py  pdf.py  tools.py  types.py  video.py
src/clyro/ipc/: constants.py  server.py
src/clyro/job_queue/: models.py  service.py  worker.py
src/clyro/ui/: drag_monitor.py  dropzone.py  format_picker.py  global_shortcuts.py  result_card.py  settings_theme.py  settings_window.py  theme.py  tray.py  update_dialog.py
src/clyro/ui/settings_pages/: about.py  dropzone_shortcuts.py  general.py  quality.py
src/clyro/utils/: download.py  entropy.py  paths.py  platform.py
tests/: test_build_release.py  test_dropzone_flows.py  test_dropzone_helpers.py  test_dropzone_scan.py  test_global_shortcuts.py  test_image_merge.py  test_ipc_and_cache.py  test_queue_states.py  test_smoke.py  test_update_dialog.py  test_updater.py
