[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clyro"
dynamic = ["version"]
description = "Windows media optimization app migrated from Clop."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PyQt6>=6.8",
  "Pillow>=10.4",
  "pypdf>=5.1",
  "pillow-heif",
  "pymupdf",
  "pdf2docx",
  "typer>=0.12",
  "aiohttp>=3.9",
  "mozjpeg-lossless-optimization",
]

[project.scripts]
clyro = "clyro.main:main"
clyro-cli = "clyro.cli.commands:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "clyro.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
ignore = ["E402", "E701", "E702", "F401", "F821", "F841"]
